# cronostat

./: .gitignore  Makefile.am  crono.c  crono.h  crono.pl  crontab  main.c  parse.c
ref/: crontab  crontest
t/: .gitignore  Makefile.am  crono.c  parse.c
